src/objects/WorkstreamCase__c.object
<CustomObject>
    <description>Agile Process Management</description>
    <fields>
        <fullName>CaseNumber__c</fullName>
        <formula>Case__r.CaseNumber</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Case Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Case__c</fullName>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Workstream Cases</relationshipLabel>
        <relationshipName>WorkstreamCases</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <formula>TEXT(Case__r.Priority)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ResolutionStatus__c</fullName>
        <label>Resolution Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Yet Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canceled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <label>Assigned Sprint</label>
        <referenceTo>Sprint__c</referenceTo>
        <relationshipLabel>Workstream Cases</relationshipLabel>
        <relationshipName>WorkstreamCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>TEXT(Case__r.Status)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Story__c</fullName>
        <label>Assigned Story</label>
        <referenceTo>Story__c</referenceTo>
        <relationshipLabel>Workstream Cases</relationshipLabel>
        <relationshipName>WorkstreamCases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <formula>Case__r.Subject</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Subject</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Workstream__c</fullName>
        <label>Workstream</label>
        <referenceTo>Workstream__c</referenceTo>
        <relationshipLabel>Workstream Cases</relationshipLabel>
        <relationshipName>WorkstreamCases</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Workstream Case</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Workstream Cases</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>WorkstreamCase_CaseIsNotMissing</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Case__c)</errorConditionFormula>
        <errorDisplayField>Case__c</errorDisplayField>
        <errorMessage>Case is missing.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>WorkstreamCase_WorkstreamIsNotMissing</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(Workstream__c)</errorConditionFormula>
        <errorDisplayField>Workstream__c</errorDisplayField>
        <errorMessage>Workstream is missing.</errorMessage>
    </validationRules>
</CustomObject>